# ascii-generator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  ascii_generator.config.html  ascii_generator.integrations.html  index.html  objects.inv  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements-release.txt  requirements-test.txt  requirements-types.txt  requirements.txt  searchindex.js  tox.ini
.github/workflows/: continuous_integration.yml
_sources/: ascii_generator.config.rst.txt  index.rst.txt
docs/source/: ascii_generator.integrations.rst  ascii_generator.interface.rst  ascii_generator.rst  ascii_generator.utilities.rst  conf.py  index.rst  modules.rst
scripts/: export_requirements.sh  release.sh  sync_requirements.sh
source/ascii_generator/: __init__.py  main.py
source/ascii_generator/computation/: __init__.py  image_processing.py
source/ascii_generator/config/: __init__.py  constants.py
source/ascii_generator/integrations/: __init__.py
source/ascii_generator/interface/: __init__.py  command_line.py
source/ascii_generator/logs/: __init__.py
source/ascii_generator/utilities/: __init__.py  file_interaction.py
